force-app/main/default/objects/Marketing_Campaign__c/fields/Captured_Prospective_Patient_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Captured_Prospective_Patient_Contacts__c</fullName>
    <inlineHelpText>(COOL LEADS)
Do not include the patients &quot;booked&quot; from this initiative. These people should be separate and distinct from the people counted as &quot;booked&quot;</inlineHelpText>
    <label>Captured Prospective Patient Contacts?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>