force-app/main/default/objects/Marketing_Campaign__c/fields/Catered_Breakfast_Lunch_Cost__c.field-meta.xml
<CustomField>
    <fullName>Catered_Breakfast_Lunch_Cost__c</fullName>
    <label>Catered Breakfast/Lunch Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>