force-app/main/default/objects/Marketing_Campaign__c/fields/Catered_Breakfast_Lunch_Provider__c.field-meta.xml
<CustomField>
    <fullName>Catered_Breakfast_Lunch_Provider__c</fullName>
    <label>Catered Breakfast/Lunch Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bloomfield Best</fullName>
            </value>
            <value>
                <fullName>Food Emporium</fullName>
            </value>
            <value>
                <fullName>Other:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>