force-app/main/default/objects/Marketing_Campaign__c/fields/Date_of_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Initiative__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date of Initiative</label>
    <required>true</required>
    <type>Date</type>
</CustomField>