force-app/main/default/objects/Marketing_Campaign__c/fields/Did_You_Book_Any_Patient_Appointments__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Book_Any_Patient_Appointments__c</fullName>
    <inlineHelpText>(HOT LEADS)
Only include patients who were given specific dates and times for an appointment with an Alliance Orthopedics provider</inlineHelpText>
    <label>Did You Book Any Patient Appointments?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>