force-app/main/default/objects/Marketing_Campaign__c/fields/How_long_were_you_there__c.field-meta.xml
<CustomField>
    <fullName>How_long_were_you_there__c</fullName>
    <inlineHelpText>approximate minutes</inlineHelpText>
    <label>How long were you there?</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>