force-app/main/default/objects/Marketing_Campaign__c/fields/Initiative_Category__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Category__c</fullName>
    <label>Initiative Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD Office (Drop In)</fullName>
            </value>
            <value>
                <fullName>Urgent Care (Drop In)</fullName>
            </value>
            <value>
                <fullName>Golf Outing</fullName>
            </value>
            <value>
                <fullName>Hospital Event</fullName>
            </value>
            <value>
                <fullName>Attorney (Drop In)</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Lunch and Learn</fullName>
            </value>
            <value>
                <fullName>School (Other)</fullName>
            </value>
            <value>
                <fullName>Police Department (Drop In)</fullName>
            </value>
            <value>
                <fullName>Government Building (Drop In)</fullName>
            </value>
            <value>
                <fullName>Corporate Office (Drop In)</fullName>
            </value>
            <value>
                <fullName>Firefighter (Drop In)</fullName>
            </value>
            <value>
                <fullName>Gym Event</fullName>
            </value>
            <value>
                <fullName>Pilates Studio Event</fullName>
            </value>
            <value>
                <fullName>Dance/Gymnast Studio Event</fullName>
            </value>
            <value>
                <fullName>Superfootball Conference Event</fullName>
            </value>
            <value>
                <fullName>Big Central Conference Event</fullName>
            </value>
            <value>
                <fullName>NJIC Event</fullName>
            </value>
            <value>
                <fullName>Alliance Orthopedics Clinic Tour</fullName>
            </value>
            <value>
                <fullName>College/University Event</fullName>
            </value>
            <value>
                <fullName>Other (Drop In)</fullName>
            </value>
            <value>
                <fullName>Other (Event)</fullName>
            </value>
            <value>
                <fullName>Other:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>