force-app/main/default/objects/Marketing_Campaign__c/fields/Initiative_location_name__c.field-meta.xml
<CustomField>
    <fullName>Initiative_location_name__c</fullName>
    <label>Initiative location name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>