force-app/main/default/objects/Marketing_Campaign__c/fields/Initiative_Region__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Region__c</fullName>
    <label>Initiative Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Old Bridge</fullName>
            </value>
            <value>
                <fullName>Middletown</fullName>
            </value>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>East Brunswick</fullName>
            </value>
            <value>
                <fullName>Union</fullName>
            </value>
            <value>
                <fullName>Fairlawn</fullName>
            </value>
            <value>
                <fullName>Bloomfield</fullName>
            </value>
            <value>
                <fullName>Randolph</fullName>
            </value>
            <value>
                <fullName>Company Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>