force-app/main/default/objects/Marketing_Campaign__c/fields/Is_Other_Material__c.field-meta.xml
<CustomField>
    <fullName>Is_Other_Material__c</fullName>
    <formula>IF(INCLUDES( What_materials_did_you_bring_with_you__c , &quot;Other:&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Other Material</label>
    <type>Checkbox</type>
</CustomField>