force-app/main/default/objects/Marketing_Campaign__c/fields/Is_Other_Steps_Drop_In__c.field-meta.xml
<CustomField>
    <fullName>Is_Other_Steps_Drop_In__c</fullName>
    <formula>IF(INCLUDES( Next_Steps_After_Drop_In__c , &quot;Other:&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Other Steps Drop-In</label>
    <type>Checkbox</type>
</CustomField>