force-app/main/default/objects/Marketing_Campaign__c/fields/Name_of_Point_Person_from_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Point_Person_from_Initiative__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Name of Point Person from Initiative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Campaigns</relationshipLabel>
    <relationshipName>Marketing_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>