force-app/main/default/objects/Marketing_Campaign__c/fields/Next_Steps_After_Drop_In__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_After_Drop_In__c</fullName>
    <inlineHelpText>Check all that apply</inlineHelpText>
    <label>Next Steps After Drop-In</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent follow up email</fullName>
            </value>
            <value>
                <fullName>Follow Up text</fullName>
            </value>
            <value>
                <fullName>Schedule follow up call</fullName>
            </value>
            <value>
                <fullName>Connect on social media</fullName>
            </value>
            <value>
                <fullName>Already connected on social media</fullName>
            </value>
            <value>
                <fullName>Follow up drop in (two weeks)</fullName>
            </value>
            <value>
                <fullName>Follow up drop in (four weeks)</fullName>
            </value>
            <value>
                <fullName>Transition to constant contact only</fullName>
            </value>
            <value>
                <fullName>Other:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>