force-app/main/default/objects/Marketing_Campaign__c/fields/No_of_COOL_Leads__c.field-meta.xml
<CustomField>
    <fullName>No_of_COOL_Leads__c</fullName>
    <description>Captured Prospective Patient Contacts?
If Yes</description>
    <inlineHelpText>Do not include the patients &quot;booked&quot; from this initiative. These people should be separate and distinct from the people counted as &quot;booked</inlineHelpText>
    <label>No of COOL Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>