force-app/main/default/objects/Marketing_Campaign__c/fields/No_of_HOT_Leads__c.field-meta.xml
<CustomField>
    <fullName>No_of_HOT_Leads__c</fullName>
    <description>Did You Book Any Patient Appointments?
If Yes</description>
    <inlineHelpText>Only include patients who were given specific dates and times for an appointment with an Alliance Orthopedics provider</inlineHelpText>
    <label>No of HOT Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>