force-app/main/default/objects/Marketing_Campaign__c/fields/Other_Breakfast_Lunch_Provider__c.field-meta.xml
<CustomField>
    <fullName>Other_Breakfast_Lunch_Provider__c</fullName>
    <description>Other Catered Breakfast/Lunch Provider</description>
    <label>Other Breakfast/Lunch Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>