force-app/main/default/objects/Marketing_Campaign__c/fields/Other_Initiative_Category__c.field-meta.xml
<CustomField>
    <fullName>Other_Initiative_Category__c</fullName>
    <description>Initiative Category - Other Picklist</description>
    <label>Other Initiative Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>