force-app/main/default/objects/Marketing_Campaign__c/fields/Other_Materials__c.field-meta.xml
<CustomField>
    <fullName>Other_Materials__c</fullName>
    <description>What materials did you bring with you? - Other Text field</description>
    <label>Other Materials</label>
    <length>80</length>
    <type>Text</type>
</CustomField>