force-app/main/default/objects/Marketing_Campaign__c/fields/Other_Steps_After_Drop_In__c.field-meta.xml
<CustomField>
    <fullName>Other_Steps_After_Drop_In__c</fullName>
    <description>Other Next Steps After Drop-In</description>
    <label>Other Steps After Drop-In</label>
    <length>80</length>
    <type>Text</type>
</CustomField>