force-app/main/default/objects/Marketing_Campaign__c/fields/Potential_Patients_with_HandsOn_Provider__c.field-meta.xml
<CustomField>
    <fullName>Potential_Patients_with_HandsOn_Provider__c</fullName>
    <label>Potential Patients with HandsOn Provider</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>