force-app/main/default/objects/Marketing_Campaign__c/fields/Reason_No_Cool_Leads_Were_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Reason_No_Cool_Leads_Were_Scheduled__c</fullName>
    <description>Captured Prospective Patient Contacts?
If No</description>
    <inlineHelpText>(COOL LEADS) Be specific and detailed
Do not include the patients &quot;booked&quot; from this initiative. These people should be separate and distinct from the people counted as &quot;booked&quot;</inlineHelpText>
    <label>Reason No Cool Leads Were Scheduled</label>
    <type>TextArea</type>
</CustomField>