force-app/main/default/objects/Marketing_Campaign__c/fields/Reason_No_Hot_Leads_Were_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Reason_No_Hot_Leads_Were_Scheduled__c</fullName>
    <inlineHelpText>(HOT LEADS)
Be specific and detailed</inlineHelpText>
    <label>Reason No Hot Leads Were Scheduled</label>
    <type>TextArea</type>
</CustomField>