force-app/main/default/objects/Marketing_Campaign__c/fields/Refresh_UI__c.field-meta.xml
<CustomField>
    <fullName>Refresh_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh UI</label>
    <type>Checkbox</type>
</CustomField>