force-app/main/default/objects/Marketing_Campaign__c/fields/Synopsis_of_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Synopsis_of_Initiative__c</fullName>
    <label>Synopsis of Initiative</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>