force-app/main/default/objects/Marketing_Campaign__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <label>Team Member</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alexa Spanvill</fullName>
            </value>
            <value>
                <fullName>Dr. Michael Zolotnitsky PT, DPT</fullName>
            </value>
            <value>
                <fullName>Bill Klepper</fullName>
            </value>
            <value>
                <fullName>Kristian Elvina</fullName>
            </value>
            <value>
                <fullName>Amy Muniz</fullName>
            </value>
            <value>
                <fullName>Gionna Postglione</fullName>
            </value>
            <value>
                <fullName>Colleen Bradley</fullName>
            </value>
            <value>
                <fullName>Giaci Vitolo</fullName>
            </value>
            <value>
                <fullName>Tanner Caccavale</fullName>
            </value>
            <value>
                <fullName>Suzanna Casler</fullName>
            </value>
            <value>
                <fullName>Alex Lamattina</fullName>
            </value>
            <value>
                <fullName>Haley Kampschmidt</fullName>
            </value>
            <value>
                <fullName>Chuk Mozie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>