force-app/main/default/objects/Marketing_Campaign__c/fields/Total_People_Fed_from_Catered_Meal__c.field-meta.xml
<CustomField>
    <fullName>Total_People_Fed_from_Catered_Meal__c</fullName>
    <label>Total People Fed from Catered Meal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>