force-app/main/default/objects/Marketing_Campaign__c/fields/Total_Potential_Patient_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Total_Potential_Patient_Interactions__c</fullName>
    <inlineHelpText>This includes all hands on and hands free conversation</inlineHelpText>
    <label>Total Potential Patient Interactions</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>