force-app/main/default/objects/Marketing_Campaign__c/fields/What_materials_did_you_bring_with_you__c.field-meta.xml
<CustomField>
    <fullName>What_materials_did_you_bring_with_you__c</fullName>
    <inlineHelpText>Check all that apply</inlineHelpText>
    <label>What materials did you bring with you?</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brochures</fullName>
            </value>
            <value>
                <fullName>Business Cards</fullName>
            </value>
            <value>
                <fullName>Flyers</fullName>
            </value>
            <value>
                <fullName>Trifolds</fullName>
            </value>
            <value>
                <fullName>Catered breakfast</fullName>
            </value>
            <value>
                <fullName>Catered lunch</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Ipad/Laptop with Videos</fullName>
            </value>
            <value>
                <fullName>TV with video loop</fullName>
            </value>
            <value>
                <fullName>Giveaways</fullName>
            </value>
            <value>
                <fullName>Massage table/chair</fullName>
            </value>
            <value>
                <fullName>Other:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>