force-app/main/default/objects/Marketing_Campaign__c/fields/Who_went_with_you__c.field-meta.xml
<CustomField>
    <fullName>Who_went_with_you__c</fullName>
    <label>Who went with you?</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>