force-app/main/default/objects/Marketing_Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Initiative_Region__c</columns>
    <columns>Initiative_Category__c</columns>
    <columns>Team_Member__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>